<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:padding="@dimen/_20sdp"
    tools:context=".activities.OtpVerification">

    <ImageView
        android:id="@+id/backOtp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/Vc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/verfication_code"
        android:textSize="@dimen/_22ssp"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/_40sdp"/>

    <TextView
        android:id="@+id/otpMail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/Vc"
        android:text="@string/please_enter_the_verification_code_sent_n_to_1234_gmail_com"
        android:layout_marginTop="@dimen/_40sdp"
        android:textStyle="bold"
        android:textAlignment="center"/>

    <com.chaos.view.PinView
        android:id="@+id/otpRes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="136dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.514"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/otpMail"
        android:layout_gravity="center"
        android:cursorVisible="true"
        android:background="@color/icon_back"
        android:foregroundTint="#F4EFEF"
        android:hint="@string/xxxx"
        android:inputType="number"
        android:textColorHint="@color/white"
        app:cursorColor="#fff"
        app:hideLineWhenFilled="true"
        app:itemCount="4"
        app:itemHeight="50dp"
        app:itemRadius="5dp"
        app:itemWidth="50dp"
        app:lineColor="#fff"
        />

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/icon_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/otpRes"
        android:text="@string/didn_t_receive_an_otp"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/_80sdp"/>

    <TextView
        android:id="@+id/otpResend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textStyle="bold"
        android:text="@string/resend_otp"
        android:layout_marginTop="@dimen/_30sdp"
        app:layout_constraintTop_toBottomOf="@+id/text"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/otpResend"
        android:animateLayoutChanges="true">
    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/_80sdp"
        android:layout_height="@dimen/_50sdp"
        android:text="@string/submit"
        android:textColor="@color/black"
        android:backgroundTint="@color/white"
        app:cornerRadius="@dimen/_8sdp"
        android:textStyle="bold"
        android:textSize="@dimen/_13ssp"
        android:id="@+id/buttonConfirm"/>

    <ProgressBar
        android:layout_marginTop="@dimen/_80sdp"
        android:visibility="gone"
        android:id="@+id/progressConfirm"
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"
        android:theme="@style/blueAccent"
        android:layout_gravity="center"/>
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>