<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="@dimen/_20sdp"
    tools:context=".activities.AccountSuccessful">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="144dp"
        android:src="@drawable/icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/success"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary"
        app:layout_constraintTop_toBottomOf="@id/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/_40sdp"
        android:text="@string/account_was_created_successfully"
        android:textStyle="bold"
        android:textSize="@dimen/_22ssp"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/user_name"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/_18ssp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/success" />

    <TextView
        android:id="@+id/homeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/_35ssp"
        app:layout_constraintTop_toBottomOf="@id/userName"
        android:text="@string/welcome_to_home_page"
        android:textStyle="bold"
        android:textColor="#454545"
        android:textSize="@dimen/_14ssp"
        android:textAlignment="center"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homeText"
        android:animateLayoutChanges="true">
        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            android:text="@string/done"
            android:textColor="@color/white"
            app:cornerRadius="@dimen/_8sdp"
            android:textStyle="bold"
            android:textSize="@dimen/_13ssp"
            android:id="@+id/buttonDone"/>

        <ProgressBar
            android:layout_marginTop="@dimen/_50sdp"
            android:visibility="gone"
            android:id="@+id/progressContinue"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:theme="@style/blueAccent"
            android:layout_gravity="center"/>
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>