<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SignUpActivity"
    android:overScrollMode="never"
    android:scrollbars="none"
    android:padding="@dimen/_20sdp"
    android:background="@color/white"
    android:clipToPadding="false">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_new_account"
            android:textSize="@dimen/_18ssp"
            android:layout_marginTop="@dimen/_20sdp"
            android:textStyle="bold"
            android:textColor="@color/text_primary_color"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp">

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/userProfile_SignUP"
                android:layout_width="@dimen/_80sdp"
                android:layout_height="@dimen/_80sdp"
                android:background="@drawable/background_image"
                android:scaleType="centerCrop"
                app:riv_oval="true"
                android:layout_gravity="center"/>

            <ImageView
                android:id="@+id/cam_icon_signUP"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:background="@drawable/ic_addpic"
                android:layout_gravity="center"/>

        </FrameLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_height="wrap_content"
            android:id="@+id/username_signUp"
            app:hintTextColor="@color/black"
            android:hint="@string/user_name"
            app:boxStrokeWidthFocused="@dimen/_2sdp"
            app:boxStrokeColor="@color/black"
            app:endIconMode="clear_text"
            app:endIconTint="@color/black"
            app:startIconDrawable="@drawable/ic_user"
            app:startIconTint="@color/black"
            android:elevation="@dimen/_10sdp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"
                android:textColor="@color/black"
                android:background="@drawable/background_field"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_height="wrap_content"
            android:id="@+id/usermail_signUp"
            app:hintTextColor="@color/black"
            android:hint="@string/email"
            app:boxStrokeWidthFocused="@dimen/_2sdp"
            app:boxStrokeColor="@color/black"
            app:endIconMode="clear_text"
            app:endIconTint="@color/black"
            app:startIconDrawable="@drawable/ic_mail"
            app:startIconTint="@color/black"
            android:elevation="@dimen/_10sdp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                android:background="@drawable/background_field"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_height="wrap_content"
            android:id="@+id/userpassword_signUp"
            app:hintTextColor="@color/black"
            android:hint="@string/password"
            app:boxStrokeWidthFocused="@dimen/_2sdp"
            app:boxStrokeColor="@color/black"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/black"
            app:startIconDrawable="@drawable/ic_lock"
            app:startIconTint="@color/black"
            android:elevation="@dimen/_10sdp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:background="@drawable/background_field"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_height="wrap_content"
            android:id="@+id/userConfirmpassword_signUp"
            app:hintTextColor="@color/black"
            android:hint="@string/confirm_password"
            app:boxStrokeWidthFocused="@dimen/_2sdp"
            app:boxStrokeColor="@color/black"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/black"
            app:startIconDrawable="@drawable/ic_lock"
            app:startIconTint="@color/black"
            android:elevation="@dimen/_10sdp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:background="@drawable/background_field"/>

        </com.google.android.material.textfield.TextInputLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true">
            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:text="@string/sign_in"
                android:textColor="@color/white"
                android:layout_marginTop="@dimen/_20sdp"
                app:cornerRadius="@dimen/_8sdp"
                android:textStyle="bold"
                android:textSize="@dimen/_13ssp"
                android:id="@+id/buttonSignUp"/>

            <ProgressBar
                android:visibility="gone"
                android:id="@+id/progressSignup"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:theme="@style/blueAccent"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_gravity="center"/>
        </FrameLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_in"
            android:layout_marginTop="@dimen/_20sdp"
            android:textSize="@dimen/_15ssp"
            android:textStyle="bold"
            android:id="@+id/textLogBack_SignUp"
            android:textColor="@color/black"/>

    </LinearLayout>

</ScrollView>